CSS for animate x-scroll, previous width and overflow prevent scroll

--- a/css/main.scss
+++ b/css/main.scss
@@ -292,20 +292,19 @@ textarea {
       /* For desktop: */
 
       .main-container {
-        width: 100%;
-        height: 100%;
+        width: 200vw;
+        height: 100vh;
         overflow-y: hidden;
-        perspective: 1000;
       }
 
       .main-container .sections{
-        width: percentage(2);
+        width: 200vw;
         height: 100%;
       }
 
       .main-container .sections .section{
         height: 100%;
-        width: calc(100%/ #{2});
+        width: 100vw;
         float: left;
       }
 
@@ -343,7 +342,7 @@ textarea {
       }
 
 
-      #arrow {
+      #arrowhold {
         grid-column: 3/4;
         grid-row: 2/3;
         align-self: center;
@@ -479,7 +478,7 @@ textarea {
         overflow: hidden;
         width: 3rem;
         height: 100%;
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         z-index: 100;
